# paracas

./: Cargo.toml  Justfile  README.md  lychee.toml
.github/workflows/: ci.yml  lychee.yml
benches/: Cargo.toml
benches/benches/: download_benchmark.rs
benches/src/: lib.rs
crates/paracas-aggregate/: Cargo.toml  README.md
crates/paracas-aggregate/src/: aggregator.rs  lib.rs  ohlcv.rs
crates/paracas-daemon/: Cargo.toml  README.md
crates/paracas-daemon/src/: daemon.rs  job.rs  lib.rs  progress.rs  state.rs
crates/paracas-estimate/: Cargo.toml  README.md
crates/paracas-estimate/data/: size_estimates.json
crates/paracas-estimate/src/: data.rs  estimator.rs  lib.rs
crates/paracas-fetch/: Cargo.toml  README.md
crates/paracas-fetch/src/: client.rs  decompress.rs  lib.rs  parse.rs  stream.rs  url.rs
crates/paracas-format/: Cargo.toml  README.md
crates/paracas-format/src/: csv.rs  formatter.rs  json.rs  lib.rs  parquet.rs
crates/paracas-instruments/: Cargo.toml  README.md
crates/paracas-instruments/data/: instruments.json
crates/paracas-instruments/src/: lib.rs
crates/paracas-lib/: Cargo.toml  README.md
crates/paracas-lib/src/: lib.rs
crates/paracas-types/: Cargo.toml  README.md
crates/paracas-types/src/: date_range.rs  error.rs  instrument.rs  lib.rs  tick.rs  timeframe.rs
