[package]
name = "paracas-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "benchmark_table"
path = "src/bin/benchmark_table.rs"

[[bench]]
name = "download_benchmark"
harness = false

[dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
